src/test/deca/syntax/invalid/sansObjets/plusplus.deca
// Description:
//    tests de programme incorrect lexicalement (++ non supporte)
//
// Historique:
//    @DATE@

{
    int y = 7;
    y++;
}